[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "agent-poc"
version = "0.1.0"
description = "POC Agent showcasing tools & planner"
requires-python = ">=3.13"


dependencies = [
    "openai>=1.3.7",
    "python-dotenv>=1.0.1",
    "pydantic>=2.4"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]

[tool.setuptools]
py-modules = ["app"]

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "W291",  # Trailing whitespace
    "W293",  # blank line contains whitespace
    "E402",  # module level import not at top of file
    "N806",  # Variable name in function should be lowercase
]

[tool.flake8]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
